--- a/assignments/assignment-2.qmd
+++ b/assignments/assignment-2.qmd
@@ -1,6 +1,10 @@
 ---
 title: "DV Assignment 2 (Final Project)"
-format: html
+format: 
+  html:
+    toc: true
+    toc-depth: 3
+    toc-float: true
 ---
 
 ```{r setup, include=FALSE}
