--- a/index.qmd
+++ b/index.qmd
@@ -5,8 +5,6 @@ format:
     toc: true
 ---
 
-## Welcome to BDS Toolbox: Data Visualization!
-
 Use the navigation bar above or the links below to find everything you need for this module.
 
 ------------------------------------------------------------------------
@@ -85,6 +83,37 @@ In this module, you will learn a wide set of data visualisation tools for both s
 [Assignment 2](assignments/assignment-2.html){target="_blank"}
 
 You'll be working with Git and GitHub for both assignments. Refer [here](documents/working-with-git.qmd) for instructions on how to set up your data visualization server account with GitHub. 
+
+Indicate your preference for a research question [here](https://docs.google.com/spreadsheets/d/1ppRe5PKrdawL8Q4QHAJpa6bfQfbVhmHZiWE7AxGaHSE/edit)
+
+## 🚨 Deadlines
+
+-   **Assignment 1** – Sunday 5/10 23.59
+-   **First draft of Assignment 2** – Friday 10/10 12.30
+-   **Peer review of Assignment 2** – Friday 10/10 23.59
+-   **Assignment 2** – Sunday 12/10 23.59
+
+**Late submissions** will be graded with a max. grade of 6, if submitted within 24 hours of the deadline. Submissions later than that will not be graded.  
+
+## 📚 Materials 
+
+::: {layout-ncol="3"}
+![[r4ds.had.co.nz](https://r4ds.hadley.nz/data-visualize.html)](../slides/images/book_wickham.png){fig-align="left" height="150"}
+
+![[socviz.co](https://socviz.co/)](../slides/images/book_healy.jpg){fig-align="left" height="150"}
+
+![[Videos on canvas](https://canvas.uva.nl/courses/54361/modules)](../slides/images/canvas.png){fig-align="left" height="150"}
+:::
+
+#### Helpful extra resources
+
+-   [Claus Wilke: Fundamentals of Data Viz](https://clauswilke.com/dataviz/)
+
+-   <https://psyteachr.github.io/introdataviz/plotstyle.html>
+
+-  [Telling Stories with Data](https://tellingstorieswithdata.com/)
+
+## 
 
 
 ## 💡 How to Use This Site
