--- a/documents/git-workflow.qmd
+++ b/documents/git-workflow.qmd
@@ -20,19 +20,19 @@ In order to be able to connect your online RStudio environment to your group's G
 
 2.  Create a SSH key: Go to `Tools` \> `global options` \> `GIT/SVN` \> click on `Create SSH Key...` \> and click `create` again; a passphrase is not necessary. Make sure the SSH key type `ED25519` is selected in the dropdown menu (should already be selected for you).
 
-![SSH Key](images/link-data-viz-to-github-1.png) ![SSH Key](images/link-data-viz-to-github-2.png)
+![SSH Key](../images/link-data-viz-to-github-1.png) ![SSH Key](../images/link-data-viz-to-github-2.png)
 
 3.  Now go to your `Files` pane in RStudio and select `Show Hidden Files` like this:
 
-![SSH Key](images/link-data-viz-to-github-3.png)
+![SSH Key](../images/link-data-viz-to-github-3.png)
 
 4.  You can find your SSH key in the `.ssh` folder. Open the file with the public key (ending with `.pub`) and copy the entire content of the file. We need to add this public key to your GitHub account
 
-![SSH Key](images/link-data-viz-to-github-4.png) ![SSH Key](images/link-data-viz-to-github-5.png)
+![SSH Key](../images/link-data-viz-to-github-4.png) ![SSH Key](../images/link-data-viz-to-github-5.png)
 
 5.  Now open GitHub and go to your `Settings`. From here, go to `SSH and GPG keys`, and click on `New SSH key`. Add the public key you just copied from your online RStudio, and give your key a title (for example, `Data viz server`).
 
-![SSH Key](images/link-data-viz-to-github-6.png)
+![SSH Key](../images/link-data-viz-to-github-6.png)
 
 And there you go! You have now successfully let your online RStudio environment and your GitHub account know that these are allowed to communicate with each other. We can now clone your assigned GitHub group repository into your RStudio account.
 
@@ -40,13 +40,13 @@ And there you go! You have now successfully let your online RStudio environment 
 
 1.  Go to your group's GitHub repository and click on the green `<> Code` button. Choose to clone the repository via **SSH** and copy the code:
 
-![SSH Key](images/set-git-r-project-1.png)
+![SSH Key](../images/set-git-r-project-1.png)
 
 2.  Now go back to RStudio. On the top right (sort of cubical icon) you can find a project overview `Project: (none)`. **Make sure this is in fact set to no project**, if you see the name of a different repository/project, click it and select `close project`.
 
 3.  Make a new R project for your group assignment: click on `New project` \> `Clone Git Repository`. Add the code you just copied from GitHub to `Repository URL` and create the project (the Project directory name will automatically be created for you).
 
-![SSH Key](images/set-git-r-project-2.png)
+![SSH Key](../images/set-git-r-project-2.png)
 
 It will now appear as if your RStudio is re-starting; don't be feared, this is what is supposed to be happening. Projects are temporary representations of your RStudio environment, so that you can work on different projects with different data to keep your work structure clear.
 
