--- a/assignments/assignment-1.qmd
+++ b/assignments/assignment-1.qmd
@@ -18,7 +18,20 @@ Download the templates for part 1 of this assignment in the [Github Repository](
 
 This is the first assignment for the Data Visualization module. The aim here is to get acquainted with the Prowise Learn data, practice with some ggplot basics, and to get you started with working with your visualizations for the final assignment.
 
-With this assignment, you can gain X points, plus X bonus points. Please [refer here](how-do-we-grade.qmd) for an overview of how we grade your data visualizations. Part 1 is completed, and thus also graded, individually. Part 2 should be completed with your assigned group. Please make sure to clearly indicate your group number and names of all group members in your submission. One person should submit the assignment on behalf of the group. If more than one person submits the group assignment, we will only look at one of them.
+With this assignment, you can gain 14 points (15 with bonus in part 1A). The points are awarded as following:
+
+Individual part:
+
+-   4 points (plus 1 bonus point) for Part 1A
+-   2 points for Part 1B
+-   0.5 point for R code that runs and 0.5 point for lintr-proof code
+
+Group part:
+
+-   6 points for visualization
+-   0.5 point for R code that runs and 0.5 point for lintr-proof code
+
+Part 1 is completed, and thus also graded, individually. Part 2 should be completed with your assigned group. Please make sure to clearly indicate your group number and names of all group members in your submission. One person should submit the assignment on behalf of the group. If more than one person submits the group assignment, we will only look at one of them.
 
 The assignment is due on **Sunday October 5th, 2025 at 23:59**. Submit your assignment to Canvas, under "DV Assignment 1".
 
@@ -31,7 +44,7 @@ with file names in the following structure: `DV-Assignment1-Firstname-Lastname-P
 
 Your group submission (Part 2) should contain the following files:
 
--   R code (style checked & working) in a `.Rmd`\
+-   R code (style checked & working) in a `.Rmd` file\
 -   Your plot and short description, compiled to `.html`
 
 with file names in the following structure: `DV-Assignment1-GroupX-PartB.Rmd` (or `.R`), `DV-Assignment1-GroupX-PartB.pdf` (or `.html`). When uploading an html file, make sure that it can be opened and the plots are readable. We will not compile the html for you!
@@ -61,13 +74,11 @@ Before starting the assignment, please look at the handout on [How to connect to
 The following code will give you the data necessary to create the plot at the end of this section. Your task is to replicate the plot using `ggplot2`.\
 Don't worry if you cannot reproduce the plots exactly. You can, for example, use different colors and font families.
 
-Grading:
+**Grading:**
 
--   Does the data show the same pattern? \[1.5 pt\]
--   Is the styling the same? \[1.5 pt\]
--   BONUS: Where there extra features added? \[1 pt\]
--   Did the code run? \[0.5 pt\]
--   Were styling issues resolved? (lintr) \[0.5 pt\]
+-   **Does the data show the same pattern? \[2 pt\]**
+-   **Is the styling the same? \[2 pt\]**
+-   **BONUS: Where there extra features added? \[1 pt\]**
 
 **Bonus points**
 
@@ -204,7 +215,7 @@ Now we can make the first plot. This plot shows us the relation which users (in 
 
 Look at this nice trick to add the %-symbol to the labels: `scale_y_continuous(labels = function(x) paste0(x, "%"))`. I used these settings in my rMarkdown code chunk: `fig.height = 4, fig.width = 6, fig.align = "center"`
 
-![](images/replicate-this-plot-1a.png)  
+![](images/replicate-this-plot-1a.png)
 
 For the second plot we look into response times and given answer (correct, incorrect or questionmark). Note that you first have to make a variable with these answers (correct, incorrect, question-mark). I used these settings in my rMarkdown code chunk: `fig.height = 4, fig.width = 6, fig.align = "center"`
 
@@ -212,13 +223,11 @@ For the second plot we look into response times and given answer (correct, incor
 
 Finally we make a plot with text to have some more information in our visualization. I used these settings in my rMarkdown code chunk: `fig.height = 2, fig.width = 10, fig.align = "center"`
 
-![](images/replicate-this-plot-1c.png)
-Finally we combine the three plots (one text plot and two figure plots) into one plot by means of the plot_grid function of the `cowplot` package. **This is the visualization that you should replicate in this assignment Part II**.
+![](images/replicate-this-plot-1c.png) Finally we combine the three plots (one text plot and two figure plots) into one plot by means of the plot_grid function of the `cowplot` package. **This is the visualization that you should replicate in this assignment Part II**.
 
 I used these settings in my rMarkdown code chunk: `fig.height = 8, fig.width = 10, fig.align = "center"`
 
-![](images/replicate-this-plot-1-final.png)
-Tips:
+![](images/replicate-this-plot-1-final.png) Tips:
 
 -   On plot 1 there is text on the third facet which does not use the default font family\
 -   To select nice colors go to http://colorbrewer2.org \[or tips on the Data Visualisation slides\]
@@ -241,10 +250,10 @@ Now, your assignment is to:
 -   Make this plot interactive using the the `plotly` package. Tip: You can use the `ggplotly()` function to convert a ggplot object to an interactive plotly object.
 -   Add a tooltip that displays additional information when you hover over the plot. Customize the tooltip so that it displays the default plot values and additional insights from **two other variables** (choose yourself). Make sure all of this information is visible when you hover over the plot.
 
-Grading:
+**Grading:**
 
--   Does the interactive plot work? \[1 pt\]
--   Does the tooltip clearly display additional (meaningful) information next to the default plot values? \[1 pt\]
+-   **Does the interactive plot work? \[1 pt\]**
+-   **Does the tooltip clearly display additional (meaningful) information next to the default plot values? \[1 pt\]**
 
 For this assignment, we will examine how the student with `new_user_id = 19872` progresses through the Multiplication game. To do so, we retrieve the student's `log_records`. In the query below, we also obtain additional information about the learning goals associated with the answered items to provide extra context alongside the data stored in the `log_records`. This is achieved by performing left joins between the `log_records` tables and two others: `items_learning_goals` (which links `item_id`'s to `learning_goal_id`'s) and `learning_goals`, which provides further details about the learning goals.
 
@@ -322,20 +331,18 @@ When you are done, please close the connection to the database (run this code in
 oefenwebDatabase::close_connections()
 ```
 
-
 ## Part 2: Start on Final DV Project (Group)
 
 ### A. Specify your research question
 
-In class 1 you indicated your preference for a research question for the final project, and were assigned a group to work with. Together with your group, read the instructions for your assigned research question in [Assignment 2](assignment-2.qmd) again.
+In class 1 you indicated your preference for a research question for the final project, and were assigned a group to work with. You were also assigned one of the GitHub repositories from the Oefenweb GitHub account, which you can use to collaborate on your research project. Together with your group, read the instructions for your assigned research question in [Assignment 2](assignment-2.qmd) again.
 
 -   Does your project take an analytical, inference, or predictive approach? Is it clear what is expected in the final data visualization with regards to the approach?\
 -   Who is your target audience? How might this influence choices for your final visualization?
 
 ### B. Connect to Git and load data
 
-For this project, you will collaborate using Git. Connect your server environment to Git by following these instructions: [Connecting RStudio Server to Git](https://hpc.ugent.be/docs/en/rstudio-server/git-rstudio-server).\
-One person should download the template R project folder and create a new GitHub repository for your group. Add the documents inside the template folder to the repository. If this is done correctly, the resulting repository should have the following folder structure:
+For this project, you will collaborate using Git. Connect your server environment to GitHub and clone your assigned GitHub repository into your online RStudio account by following these instructions: [Connecting RStudio Server to GitHub](https://ann1ejohansson.github.io/data-visualization-2025/documents/git-workflow.html). If this is done correctly, the resulting repository should have the following folder structure:
 
 ```         
 your-project-name/
@@ -349,24 +356,9 @@ your-project-name/
     └── DV-Assignment2-GroupX.html
 ```
 
-The other group members can then clone this repository to their server environment. Make a first commit and push it. Check that the other group members can pull these changes. If this works, you should be properly set up to work together using Git!
+All group members should clone the assigned group repository to their server environment. Once you have cloned the repo and initialized Git, make a first commit and push it. Check that the other group members can pull these changes. If this works, you should be properly set up to work together using Git!
 
-Feel free to add folders or files within the repository if necessary. Make sure that you maintain the structure such that you follow a [reproducible workflow](https://tellingstorieswithdata.com/03-workflow.html#r-projects-and-file-structure). Additionally, it is important that you never push data to GitHub. If you have to store data, do this in a separate folder outside of your Git repository. Your `.gitignore` file should already contain the following lines:
-
-```         
-# Ignore data files
-data/
-*.rds
-*.RDS
-*.RData
-*.rdata
-*.csv
-*.tsv
-*.xlsx
-*.rda
-```
-
-This should prevent you from accidentally pushing data files to GitHub. Still, be mindful not to add any data files to your project repository.
+Feel free to add folders or files within the repository if necessary. Make sure that you maintain the structure such that you follow a [reproducible workflow](https://tellingstorieswithdata.com/03-workflow.html#r-projects-and-file-structure). Additionally, it is important that you **never push data to GitHub**. If you have to store data, do this in a separate folder outside of your Git repository.
 
 Now, load in the necessary data for your visualization. The code for this is available in [Assignment 2](assignment-2.qmd). Use the script `00-load-data.R` in the `code/` folder to load in the data. Examine the data. Discuss with your group:
 
@@ -385,17 +377,17 @@ For this assignment you can make any visualization about the chosen theme of the
 
 Include a description of what you want to communicate, and how you did that. Really work towards making a data visualization that highlights or substantiates a single conclusion. This plot does not have to be the plot for your final project (it probably is not), but use this assignment to get feedback from us on your current ideas.
 
-Grading:
+**Grading:**
 
--   Aesthetics
+-   **Aesthetics**
     -   Is the plot legible? \[1pt\]
     -   Do the colors add to the interpretability? \[1pt\]
     -   Is the plot simple? \[0.5 pt\]
--   Communication
+-   **Communication**
     -   Is it clear what the plots tries to communicate? \[1pt\]
     -   Does the plot communicate the described conclusions/description? \[1pt\]
     -   The plot requires minimal explanation \[0.5 pt\]
--   Creative/complexity
+-   **Creative/complexity**
     -   Is the plot creative? \[0.5 pt\]
     -   Is the plot/analysis complex? \[0.5 pt\]
 
