--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -1,426 +1,6 @@
 ---
-title: "<span style='color: white;font-size: 0.7em;'>Data Visualization</span>"
-subtitle: "<span style='color: white;'>Behavioral Data Science Toolbox 2025</span>"
-author: "<span style='color: white;'>Lecturers: Annie Johansson and Lilian Ye</span>"
-#footer: "<span style='color: white;'>Cover photo made in R by <a href='https://art.djnavarro.net' style='color: pink; text-decoration: underline;'>Danielle Navarro</a></span>"
-format: 
-  revealjs:
-    highlight-style: arrow
-    include-navbar: true
-    logo: images/uva_logo.png
-    preview-links: false
-    progress: true
-    slide-number: true
-    show-slide-number: print
-    smaller: false
-    touch: true
-editor: visual
-title-slide-attributes:
-  data-background-image: "images/coverphoto.jpg"
-  data-background-size: auto
+title: "Page locked"
+format: html
 ---
 
-------------------------------------------------------------------------
-
-```{r, include=FALSE}
-library(tidyverse)
-```
-
-## 
-
-:::::: columns
-:::: {.column width="50%"}
-::: columns
-Slides made using [quarto](https://quarto.org){target="_blank"}
-
-Cover photo made in R by [Danielle Navarro](https://art.djnavarro.net){target="_blank"}
-:::
-::::
-
-::: {.column width="50%"}
-![](images/coverphoto.jpg){fig-align="center" width="80%"}
-:::
-::::::
-
-
-## 📌
-
-### [**data-visualization-2025**](https://ann1ejohansson.github.io/data-visualization-2025){target="_blank"}
-
-## Today
-
--  What makes a plot good (and bad)?\
--  Guiding principles
--  Data Visualization Project
-
-# Bad plots 💩 {background-color="#8000FF"}
-
-
-## 💬
-
-### Why visualize data?
-
-## Why visualize data?  {.smaller}
-
-:::::: columns
-::: {.column width="40%"}
-![](images/why-visualize-01.png)
-:::
-
-:::: {.column width="60%"}
-::: fragment
-![](images/why-visualize-02.png)
-:::
-::::
-::::::
-
-## Why visualize data?  {.smaller}
-
-::: {layout-ncol="2"}
-<a href="images/bandjes1.png" target="_blank"> <img src="images/bandjes1.png" width="500" dpi="1000" style="max-width: 100%;"/> </a>
-
-<a href="images/bandjes2.png" target="_blank"> <img src="images/bandjes2.png" dpi="1000" width="500" style="max-width: 100%;"/> </a>
-:::
-
-## Anscombe's quartet {.smaller}
-
-::::: columns
-::: {.column width="50%"}
-![Source: Same stats, different graphs](images/anscombe1.png) ![Source: Wikipedia](images/anscombe2.png)
-:::
-
-::: {.column width="50%"}
-```{r}
-#| echo: true
-#| code-fold: true
-#| fig.height: 10
-library("datasauRus")
-datasaurus_dozen %>% 
-  ggplot2::ggplot(aes(x = x, y = y, color = dataset)) +
-  ggplot2::geom_point() +
-  ggplot2::theme_void() +
-  ggplot2::geom_smooth(method = "lm", color = "gray", fill = "gray", alpha = .5) +
-  ggplot2::theme(legend.position = "none", text = element_text(size = 30)) +
-  ggplot2::facet_wrap(~dataset, ncol = 4)
-```
-:::
-:::::
-
-::: footer
-Packages: [datasauRus](https://jumpingrivers.github.io/datasauRus/), [anscombiser](https://paulnorthrop.github.io/anscombiser/).
-
-More information: [Same Stats, Different Graphs](https://www.autodesk.com/research/publications/same-stats-different-graphs), [socviz.co](https://socviz.co/lookatdata.html#why-look-at-data).
-:::
-
-
-## 💬
-
-### What is more important? An eye or an algorithm?
-
-What are the consequences of overrelying on statistical techniques? <br>What are the consequences of overrelying on visualizations?
-
-## What makes a bad plot bad?
-::::: columns
-::: {.column width="40%"}
--  Aesthetic (ugly)
-
--  Perceptual (bad)
-
--  Substantive (wrong)
-:::
-
-::: {.column width="60%"}
-![[Claus Wilke - Ugly, bad, and wrong figures](https://clauswilke.com/dataviz/introduction.html)](images/ugly-bad-wrong.png)
-:::
-:::::
-
-## 💬 Speed dates
-
-::::: columns
-::: {.column width="40%"}
--   What do you think about this plot?
-
--   What elements can be improved?
-
--   Are there still good things with the plot?
-:::
-
-::: {.column width="60%"}
-![Karl Broman](images/broman_worst_graph.jpg)
-:::
-:::::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![reddit.com/r/dataisugly](images/lidl.png){fig-align="left" height="500"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Misleading (or missing) information?
--   Many data visualizations might have a hidden agenda, due to e.g. marketing strategies.
-:::
-::::
-::::::
-
-::: footer
-Check out the classic from Darrel Huff [How to Lie with Statistics](https://www.penguin.co.uk/books/13565/how-to-lie-with-statistics-by-darrell-huff-with-pictures-by-mel-calman/9780140136296) [Lessions from How to Lie with Statistics.](https://towardsdatascience.com/lessons-from-how-to-lie-with-statistics-57060c0d2f19)
-:::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![[Source: reddit.com/r/dataisbeautiful](https://www.reddit.com/r/dataisugly/)](images/data_ink.png){fig-align="left" width="544"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Data to ink ratio?
-:::
-::::
-::::::
-
-::: footer
-[How to maximize the data-to-ink ratio](https://www.codeconquest.com/blog/data-ink-ratio-explained-with-example/)
-:::
-
-------------------------------------------------------------------------
-
-### Data to ink ratio
-
-::::: columns
-::: {.column width="50%"}
-![](images/data_ink.png)
-:::
-
-::: {.column width="50%"}
-![](images/data_ink2.jpeg){height="500"}
-:::
-:::::
-
-::: footer
-[How to maximize the data-to-ink ratio](https://www.codeconquest.com/blog/data-ink-ratio-explained-with-example/)
-:::
-
-------------------------------------------------------------------------
-
-![](images/treemap.png)
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/colors.jpg){width="490"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Do the colors make sense?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-![Do the colors make sense?](images/colors2.png)
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/all_elements_needed.jpeg){width="490"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Are all elements needed?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/axes_correct.jpeg){height="500"}
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Are the axes correct?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-![Is a zero-point needed?](images/ireland.png)
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/stacked1.png)
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Is it simple?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-### ⚠️ Stacked bar charts ⚠️
-
-::::: columns
-::: {.column width="60%"}
-![](images/stacked2.png)
-:::
-
-::: {.column width="40%"}
-![](images/brazil.jpeg)
-:::
-:::::
-
-------------------------------------------------------------------------
-
-### ⚠️ Pie charts ⚠️
-
-![](images/pie1.png)
-
-------------------------------------------------------------------------
-
-### Visualizing proportions
-
--   Pie chart, stacked bar, or side-by-side bars?
-
-![](images/proportions.png)
-
-<https://clauswilke.com/dataviz/visualizing-proportions.html#>
-
-------------------------------------------------------------------------
-
-![Elementary Perceptual Tasks](images/ept.png)  
-
-::: footer
-Original Source: [Cleveland & McGill (1984). 531-554](https://www.tandfonline.com/doi/abs/10.1080/01621459.1984.10478080); [Further summary and examples](https://bookdown.org/dereksonderegger/141/6-graphing-principles.html)
-:::
-
-------------------------------------------------------------------------
-
-💬
-
-:::::: columns
-::: {.column width="60%"}
-![](images/storytelling_before.png)
-:::
-
-:::: {.column width="40%"}
-::: fragment
--   Does it support one conclusion?
-:::
-::::
-::::::
-
-------------------------------------------------------------------------
-
-### Storytelling with data - show just one conclusion! 
-
-![](images/storytelling_after.png)
-
-## Exploratory versus explanatory {.smaller .scrollable}
-
-::: notes
-Exploratory in the sense of data exploration. Exploratory in the sense of visualization exploration (as in previous example, where the same data can be plotted in several ways). In both cases, you can create ugly plots.
-
-We focus on explanatory data viz (also bridge to next). Beautiful plots!
-:::
-
-::::: columns
-::: {.column width="50%"}
-![Source: [Natalia Kiseleva](https://eolay.tilda.ws/datavizcomics/en)](images/exploratory-explanatory-01.png){fig-align="left" width="333"}
-:::
-
-::: {.column width="50%"}
-![Source: [Scott McCloud](https://archive.org/details/understanding-comics/)](images/exploratory-explanatory-02.gif){fig-align="left"}
-
--   **Exploratory**: examine the structure of your data.
-
--   **Explanatory:** tell a story with your data.
-:::
-:::::
-
-::: footer
-More resources: [clauswilke.com](https://clauswilke.com/dataviz/telling-a-story.html) (telling a story and making a point), [susielu.com](https://www.susielu.com/data-viz/storytelling-in-dashboards) (different interpretation of exploratory/explanatory).
-:::
-
-## Exploratory versus explanatory {.smaller .scrollable}
-
-::::: columns
-::: {.column width="50%"}
-![](images/explore-explain-01.gif){fig-height="200"}
-:::
-
-::: {.column width="50%"}
-![](images/explore-explain-02.gif){fig-height="300"}
-:::
-:::::
-
-Source: [storytellingwithdata.com](https://www.storytellingwithdata.com/blog/2014/04/exploratory-vs-explanatory-analysis)
-
-::: footer
-More resources: [clauswilke.com](https://clauswilke.com/dataviz/telling-a-story.html) (telling a story and making a point), [susielu.com](https://www.susielu.com/data-viz/storytelling-in-dashboards) (different interpretation of exploratory/explanatory).
-:::
-
-
-
-
-# Data Visualization Project 📊 {background-color="#8000FF"}
-
-## Aims
-
-Your goal is to go from exploring the Prowise data to telling a story with it.
-
--   [Assignment 1](../assignments/assignment-1.html){target="_blank"}: Choose a research question. Explore the data and create a set of visualizations to help you understand the data.
-
--   [Assignment 2](../assignments/assignment-2.html){target="_blank"}: Create a final data visualization that tells a story with the data. Compiled into a html document, and presented in a GitHub repository.
-
-## The data
-
-## Requirements Assignment 2
-
--   Use R Markdown (or Quarto) to create your visualizations.
--   The markdown document should be in the style of a report: explain your research question, and how you came to your conclusion. Not more than 1000 words.\
--   Include at least one exploratory graph, and explain how it helped you understand the data.
--   Only your final, explanatory graph, will be graded. Clearly mark which graph this is.
-
-## Workflow
-
--   Comment your code clearly. We want to understand your thought process.
--   Work in the Data Visualization Server, and compile the html document there.\
--   ️⚠ Only upload the html document to GitHub, not the R scripts and **especially not any data.**
-
-## Workflow
-
--   [Working on the server](../documents/working-on-the-server.html){target="_blank"}
-
--  [Git setup & workflow](../documents/working-with-git.html){target="_blank"}
-
--  [Rubrics](../documents/how-do-we-grade.html){target="_blank"}
+## This page is locked. Come back soon!
