--- a/slides/slides copy.qmd
+++ b/slides/slides copy.qmd
@@ -42,25 +42,23 @@ Cover photo made in R by [Danielle Navarro](https://art.djnavarro.net){target="_
 :::
 ::::::
 
-
 ## 📌
 
 ### [**data-visualization-2025**](https://ann1ejohansson.github.io/data-visualization-2025){target="_blank"}
 
 ## Today
 
--  What makes a plot good (and bad)?\
--  Guiding principles
--  Data Visualization Project
+-   What makes a plot good (and bad)?\
+-   Guiding principles
+-   Data Visualization Project
 
 # Bad plots 💩 {background-color="#8000FF"}
-
 
 ## 💬
 
 ### Why visualize data?
 
-## Why visualize data?  {.smaller}
+## Why visualize data? {.smaller}
 
 :::::: columns
 ::: {.column width="40%"}
@@ -74,7 +72,7 @@ Cover photo made in R by [Danielle Navarro](https://art.djnavarro.net){target="_
 ::::
 ::::::
 
-## Why visualize data?  {.smaller}
+## Why visualize data? {.smaller}
 
 ::: {layout-ncol="2"}
 <a href="images/bandjes1.png" target="_blank"> <img src="images/bandjes1.png" width="500" dpi="1000" style="max-width: 100%;"/> </a>
@@ -112,7 +110,6 @@ Packages: [datasauRus](https://jumpingrivers.github.io/datasauRus/), [anscombise
 More information: [Same Stats, Different Graphs](https://www.autodesk.com/research/publications/same-stats-different-graphs), [socviz.co](https://socviz.co/lookatdata.html#why-look-at-data).
 :::
 
-
 ## 💬
 
 ### What is more important? An eye or an algorithm?
@@ -120,13 +117,14 @@ More information: [Same Stats, Different Graphs](https://www.autodesk.com/resear
 What are the consequences of overrelying on statistical techniques? <br>What are the consequences of overrelying on visualizations?
 
 ## What makes a bad plot bad?
+
 ::::: columns
 ::: {.column width="40%"}
--  Aesthetic (ugly)
+-   Aesthetic (ugly)
 
--  Perceptual (bad)
+-   Perceptual (bad)
 
--  Substantive (wrong)
+-   Substantive (wrong)
 :::
 
 ::: {.column width="60%"}
@@ -142,11 +140,11 @@ What are the consequences of overrelying on statistical techniques? <br>What are
 
 -   What elements can be improved?
 
--   Are there still good things with the plot?
+-   Are the problems aesthetic, perceptual, or substantive?
 :::
 
 ::: {.column width="60%"}
-![Karl Broman](images/broman_worst_graph.jpg)
+![](images/ireland.png)
 :::
 :::::
 
@@ -317,7 +315,7 @@ Check out the classic from Darrel Huff [How to Lie with Statistics](https://www.
 
 ------------------------------------------------------------------------
 
-![Elementary Perceptual Tasks](images/ept.png)  
+![Elementary Perceptual Tasks](images/ept.png)
 
 ::: footer
 Original Source: [Cleveland & McGill (1984). 531-554](https://www.tandfonline.com/doi/abs/10.1080/01621459.1984.10478080); [Further summary and examples](https://bookdown.org/dereksonderegger/141/6-graphing-principles.html)
@@ -341,7 +339,7 @@ Original Source: [Cleveland & McGill (1984). 531-554](https://www.tandfonline.co
 
 ------------------------------------------------------------------------
 
-### Storytelling with data - show just one conclusion! 
+### Storytelling with data - show just one conclusion!
 
 ![](images/storytelling_after.png)
 
@@ -389,7 +387,44 @@ Source: [storytellingwithdata.com](https://www.storytellingwithdata.com/blog/201
 More resources: [clauswilke.com](https://clauswilke.com/dataviz/telling-a-story.html) (telling a story and making a point), [susielu.com](https://www.susielu.com/data-viz/storytelling-in-dashboards) (different interpretation of exploratory/explanatory).
 :::
 
+## [Some good examples]{style="font-size: 0.7em;"} {.smaller .scrollable}
 
+[![](images/good1.png){width="100%"}](images/good1.png) [Distributions are informative](https://clauswilke.com/dataviz/histograms-density-plots.html)
+
+::::: columns
+::: {.column width="50%"}
+[![](images/good2.png){width="100%"}](images/good2.png)
+:::
+
+::: {.column width="50%"}
+[![](images/good3.png){width="100%"}](images/good3.png)
+:::
+:::::
+
+[NYT Graphic - Obamacare spending](https://www.nytimes.com/interactive/2023/09/05/upshot/medicare-budget-threat-receded.html?pgtype=Article&action=click&module=RelatedLinks)
+
+[How to reproduce a NYT graphic](https://sean.netlify.app/post/how-to-reproduce-a-nyt-graphic/)
+
+# Guiding principles 🪄 {background-color="#8000FF"}
+
+
+## Tips for the best viz
+
+-   Is it **explaining** data?
+
+-   Is the information **complete and correct**?
+
+-   Are **axes** correct? (+ Should they have a zero-point?)
+
+-   Do the **colors** work? ( + Do they map to a relevant attribute?)
+
+-   Are all **elements** needed?
+
+-   What is the **data to ink ratio?**
+
+-   Is it **understandable & simple?**
+
+-   Does it portray **one conclusion**?
 
 
 # Data Visualization Project 📊 {background-color="#8000FF"}
@@ -402,25 +437,23 @@ Your goal is to go from exploring the Prowise data to telling a story with it.
 
 -   [Assignment 2](../assignments/assignment-2.html){target="_blank"}: Create a final data visualization that tells a story with the data. Compiled into a html document, and presented in a GitHub repository.
 
-## The data
 
 ## Requirements Assignment 2
 
 -   Use R Markdown (or Quarto) to create your visualizations.
 -   The markdown document should be in the style of a report: explain your research question, and how you came to your conclusion. Not more than 1000 words.\
--   Include at least one exploratory graph, and explain how it helped you understand the data.
+-   Include an exploratory graph, and explain how it helped you understand the data.
 -   Only your final, explanatory graph, will be graded. Clearly mark which graph this is.
 
 ## Workflow
 
 -   Comment your code clearly. We want to understand your thought process.
--   Work in the Data Visualization Server, and compile the html document there.\
--   ️⚠ Only upload the html document to GitHub, not the R scripts and **especially not any data.**
+-   Collaborate within your group using Git & GitHub. You will set up your own project repository connected to the Data Visualization Server. 
+-   Make sure all documents render correctly, and that code is styled and runs. 
+-   ️⚠ **Do not push any data to GitHub.**
 
 ## Workflow
 
 -   [Working on the server](../documents/working-on-the-server.html){target="_blank"}
 
--  [Git setup & workflow](../documents/working-with-git.html){target="_blank"}
-
--  [Rubrics](../documents/how-do-we-grade.html){target="_blank"}
+-   [Git setup & workflow](../documents/working-with-git.html){target="_blank"}
