--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -18,6 +18,8 @@ editor: visual
 title-slide-attributes:
   data-background-image: "images/coverphoto.jpg"
   data-background-size: auto
+  data-background-opacity: "1.0"
+  data-background-repeat: repeat
 ---
 
 ------------------------------------------------------------------------
@@ -500,9 +502,10 @@ Your goal is to go from exploring the Prowise data to telling a story with it.
 
 -   Peer review due Friday 10/10 23.59 -- Review one other group's work. You will have time for this during Friday's class.
 
-## Grading
 
--   Assigment 1: 50%
--   Individual part:
--   Group part:
--   Assigment 2: 50%
+## 🔗
+
+[Choose RQ](https://docs.google.com/spreadsheets/d/1ppRe5PKrdawL8Q4QHAJpa6bfQfbVhmHZiWE7AxGaHSE/edit?gid=0#gid=0){target="_blank"}
+
+
+
